# final_swproject

./: BUILD_GUIDE_MACOS.md  BUILD_GUIDE_WINDOWS.md  README.md
CLI_AES(v1.0)/: BUILD_GUIDE_MACOS.md  BUILD_GUIDE_WINDOWS.md  README.md  aes_ctr.c  cli.c  error_utils.h  hmac_sha512.h  key_derivation.h  password_utils.h  random_utils.c  주의사항
CLI_AES(v1.0)(솔루션파일)/: CLI_AES(v1.0)(솔루션파일).sln
CLI_AES(v1.0)(솔루션파일)/CLI_AES(v1.0)(솔루션파일)/: CLI_AES(v1.0)(솔루션파일).vcxproj  CLI_AES(v1.0)(솔루션파일).vcxproj.filters  README.md  aes_ctr.c  cli.c  error_utils.c  random_utils.h
GUI_AES(v1.0)/: BUILD_GUIDE_MACOS.md  BUILD_GUIDE_WINDOWS.md  CMakeLists.txt  README.md  cli.c  cryptoworker.cpp  cryptoworker.h  error_utils.c  file_path_utils.c  file_path_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platform_utils.c  random_utils.h
solution/CLI_AES(v1.0)(솔루션파일)/CLI_AES(v1.0)(솔루션파일)/: error_utils.h  hmac_sha512.h  key_derivation.c  random_utils.c
solution/src(솔루션파일)/src(솔루션파일)/: aes.h  sample.c  sha512.c
solution/test_vectors(솔루션포함)/: test_vectors(솔루션포함).sln
solution/test_vectors(솔루션포함)/test_vectors(솔루션포함)/: README.md  kdf.c  kdf.h  key_derivation.h  password_utils.h
source code/: example_all.c
src/: README.md  aes.h  crypto_api.h  example_all.c  kdf.h  key_derivation.c  platform_utils.h  sample.c
src(솔루션파일)/: src(솔루션파일).sln
src(솔루션파일)/src(솔루션파일)/: crypto_api.h  hmac_sha512.c  platform_utils.c  platform_utils.h  src(솔루션파일).vcxproj  src(솔루션파일).vcxproj.filters
test_vectors/: README.md  crypto_api.h  error_utils.c  hmac_sha512.c  sha512.h  test.c
test_vectors(솔루션포함)/test_vectors(솔루션포함)/: cli.c  error_utils.c  file_crypto.h  file_path_utils.c  file_path_utils.h  password_utils.c  sha512.h  test.c  test_vectors(솔루션포함).vcxproj  test_vectors(솔루션포함).vcxproj.filters
test용/: cli.c  file_crypto.h  kdf.c  password_utils.c  sha512.c  test.c
